--- a/main.css
+++ b/main.css
@@ -111,7 +111,7 @@ button {
         width: 50%;
         height: 300px;
         padding-left: 40px;
-       
+        max-height: fit-content;
     }
     button {
         width: 30vw;
@@ -123,5 +123,6 @@ button {
        margin-top: -300px;
        height: 300px;
        padding-left: 20px;
+       max-height: fit-content;
     }
   }
