--- a/main.css
+++ b/main.css
@@ -86,6 +86,10 @@ button {
 @media screen and (min-width: 725px) {
     .first {
         padding: 60px 0px 50px 40px;
+        height: 50vh;
+    }
+    .section2 {
+        height: 50vh;
     }
     h2 {
         font-size: 35px;
